--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_no_parallelism.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_no_parallelism.yaml
@@ -1,9 +1,11 @@
+# EXAMPLE FILE USED FOR TESTING/README ONLY.
+# DO NOT MODIFY.
 
 sw_param:
-  kernel_launch_overhead: 9e-6   #9us
+  kernel_launch_overhead: 9e-6
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
-  dp_zero_stage: 0
+  dp_zero_stage: 2
   precision:
     # tensor_format accepts numeric byte counts or dtype strings (fp16, bf16, fp32).
     # Take care that the number of flops defined below has been carefully tuned for FP16/BF16 formats.
@@ -23,40 +25,39 @@ sw_param:
     param_storage_mode: as_tensor_format
     # kv_cache precision may be set as bytes, dtype string, or "as_tensor_format".
     kv_cache: as_tensor_format
-  h2d_bandwidth: 13297674240    # Bytes/s; set -1 to disable H2D timing
-
+  h2d_bandwidth: -1  # Bytes/s; set -1 to disable H2D timing
 tech_param:
   core:
-    operating_frequency: 1.33e9     #Hz
-    num_bundles: 80     # V100 has 80 SMs
-    nominal_flop_rate_per_mcu: 128
+    operating_frequency: 1.41e9
+    num_bundles: 108
+    nominal_flop_rate_per_mcu: 512
     nominal_energy_per_flop: 1.8e-13
-    num_mcu_per_bundle: 8     #a bundle can be thought of as an SM, number of tensorcores per SM
-    FMA_d1: 4                # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
+    num_mcu_per_bundle: 4
+    FMA_d1: 8
     FMA_d2: 4
-    dataflow: best              #{wst. ast, ost, best, none}: wst: weight stationary, ast: activation stationary, ost: output stationary
-    util: 0.85     #util should be 0.75 (12/16) for tensorcore
+    dataflow: best
+    util: 1.0
   DRAM:
-    size: 16 GB     # V100 has 16GB HBM2
-    bandwidth: 900 GB     # V100 has ~900 GB/s bandwidth
-    dynamic_energy_per_bit: 4.2e-12     #Joules
+    size: 80 GB
+    bandwidth: 1986 GB
+    dynamic_energy_per_bit: 4.5e-12
     latency: 100e-9
     util: 1
   SRAM-L2:
-    size: 6 MB     # V100 L2 cache
-    bandwidth: 3072 GB     # Estimated L2 bandwidth
+    size: 40 MB
+    bandwidth: 7050 GB
     dynamic_energy_per_bit: 130e-15
     latency: 0
-    util: 0.45
+    util: 1
   SRAM-L1:
-    size: 6400 KB     # 80 KB per SM * 80 SMs
-    bandwidth: 15 TB     # Estimated L1 bandwidth
+    size: 20736 KB
+    bandwidth: 18 TB
     dynamic_energy_per_bit: 130e-15
     latency: 0
     util: 1
   SRAM-R:
-    size: 20 MB     # Register file
-    bandwidth: 80 TB     # Estimated register bandwidth
+    size: 27 MB
+    bandwidth: 122 TB
     dynamic_energy_per_bit: 110e-15
     latency: 0
     util: 1
@@ -64,73 +65,59 @@ tech_param:
     intra_node:
       latency: 5e-6
       util: 1
-      bandwidth: 300 Gb
+      bandwidth: 400 Gb
     inter_node:
       latency: 5e-6
       util: 0.96
-      bandwidth: 300 Gb
-
-system_hierarchy:
-  num_devices_per_node: 1
-  num_nodes: 1
-  kp1_inter: false
-  kp2_inter: false
-  dp_inter: false
-  lp_inter: false
-  tp_inter: false
-
-network_topology:
-  # Allowed values: ring | fc | switch
-  inter_node: ring
-  intra_node: ring
-
+      bandwidth: 400 Gb
 memory_hierarchy:
-  l0:   #Register Memory
+  l0:
     type: SRAM-R
     scope: mcu
-  l1:   #Shared Memory
+  l1:
     type: SRAM-L1
     scope: mcu-bundle
-  l2:   #L2
+  l2:
     type: SRAM-L2
     scope: global
-  l3:   #Global Memory
+  l3:
     type: DRAM
     scope: global
 
-scheduling_param:
-  auto: false
+
+parallelism:
   ### LLM PARAMS ###
   dp: 1 # acts as replica count during inference
   lp: 1 # pipeline stages
   mb: 1 # number of micro-batches
   tp: 1 # tensor parallelism
-  tp_sp: true # tensor-sequence parallelism
+  tp_sp: false # tensor-sequence parallelism
   cp : 1 # context parallelism
-  ### LSTM/GEMM LEGACY PARAMS ###
-  t: CR
-  kp1: 1
-  kp2: 1
-  kp_hidden_dim1: 1
-  kp_hidden_dim2: 1
-  kp_softmax_dim1: 1
-  kp_softmax_dim2: 1
-  kp_embedding_dim1: 1
-  kp_embedding_dim2: 1
-  kp_projection_dim1: 1
-  kp_projection_dim2: 1
-  kp_hidden_type: -1
-  kp_softmax_type: -1
-  kp_embedding_type: -1
-  kp_projection_type: -1
+
+network:
+  dimensions:
+    - id: dim0
+      label: device_fabric
+      size: 1
+      topology:
+        type: Ring
+        bandwidth: 400 Gb
+        latency: 5e-6
+        energy_per_bit: 8e-12 # (J/bit)
+        util: 1.0
+      collective_override: {} # overrides execution_backend.collectives when provided
+      parallelisms: [tp, cp, lp, dp]
+
+
 
 execution_backend:
-  model: astra # analytical | astra
+  model: analytical # analytical | astra
   astra:
     backend: astra
-    mode: hybrid  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
-    collective_override:
-      # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree
+    mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    collectives:
+      # Default collective algorithms. Per-dimension collective_override entries can override these.
+      # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree | mesh | mesh2d | hypercube | torus2d
       # Note: leave to auto unless you have a specific reason to change it.
       all_gather: auto
       all_reduce: auto
@@ -142,4 +129,4 @@ execution_backend:
       preferred_dataset_splits: 32 # Should be same as active_chunks_per_dimension
 
 inference:
-  kvcache_type: hbm_only
+  kvcache_type: hbm_only # Only supported mode for now.
