--- a/configs/hardware-config/gmap_mesh2d_demo.yaml
+++ b/configs/hardware-config/gmap_mesh2d_demo.yaml
@@ -1,4 +1,5 @@
 sw_param:
+  full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
   kernel_launch_overhead: 5e-6
   dp_zero_stage: 0
   precision:
