--- a/validation_scripts/validation_configs/hardware-config/H100_SXM5_80GB.yaml
+++ b/validation_scripts/validation_configs/hardware-config/H100_SXM5_80GB.yaml
@@ -5,6 +5,7 @@
 # [Semi] https://semianalysis.com/2025/06/23/nvidia-tensor-core-evolution-from-volta-to-blackwell/#4th-generation-tensor-core-warpgroup-level-asynchronous-mma
 
 sw_param:
+  full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
   kernel_launch_overhead: 9e-6   # (s)
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
