--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_korthikanti.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_korthikanti.yaml
@@ -1,4 +1,5 @@
 sw_param:
+  full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
   kernel_launch_overhead: 9e-6   # (s)
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
