--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_korthikanti.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_korthikanti.yaml
@@ -39,7 +39,7 @@ tech_param:
     bandwidth: 1986 GB     # (/s)
     dynamic_energy_per_bit: 4.5e-12     # (J)
     latency: 100e-9     # (s)
-    util: 1.0
+    util: 0.7
   SRAM-L2:
     size: 40 MB
     bandwidth: 7050 GB
@@ -83,6 +83,10 @@ parallelism:
   mb: 1 # micro-batches (for best results set to >= lp). 
 
 network:
+  overlap:
+    tp_overlap: 0.6
+    tp_sp_overlap: 0.63
+    cp_overlap: 0.8
   # Global faulty links apply to the active AstraSim dimension: [[src, dst, weight]]
   # faulty_links: [[0,1,0.6],[16,17,0.1]]
   dimensions:
@@ -92,7 +96,7 @@ network:
       size: auto
       topology:
         type: FullyConnected
-        bandwidth: 300 GB # based on num nvlinks per GPU * 25 GB/s per link
+        bandwidth: 125 GB # based on num nvlinks per GPU * 25 GB/s per link + 50GB/s derate + uni
         energy_per_bit: 8e-12 # (J/bit)
         latency: 1e-6 
         util: 1.0
@@ -126,7 +130,7 @@ execution_backend:
   model: astra # analytical | astra
   astra:
     backend: astra
-    mode: full_astrasim_flattened  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
+    mode: full_astrasim_hierarchical  # hybrid | full_astrasim_hierarchical | full_astrasim_flattened
     collectives:
       # Default collective algorithms. Per-dimension collective_override entries can override these.
       # Allowed values per op: auto | ring | direct | halvingDoubling | doubleBinaryTree | mesh | mesh2d | hypercube | torus2d
