--- a/configs/hardware-config/a100_80GB.yaml
+++ b/configs/hardware-config/a100_80GB.yaml
@@ -83,6 +83,10 @@ parallelism:
   mb: 4 # micro-batches (for best results set to >= lp). 
 
 network:
+  overlap:
+    tp_overlap: 0.6
+    tp_sp_overlap: 0.63
+    cp_overlap: 1.0
   # Global faulty links apply to the active AstraSim dimension: [[src, dst, weight]]
   # faulty_links: [[0,1,0.6],[16,17,0.1]]
   dimensions:
