--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_no_parallelism.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_no_parallelism.yaml
@@ -110,6 +110,13 @@ network:
 
 
 
+  overlap:
+    # fraction of TP+SP compute that can overlap TP/SP comm
+    tp_sp_overlap: 0.63
+    # fraction of TP compute that can overlap TP comm
+    tp_overlap: 0.6
+    # fraction of CP comm that can overlap CP compute
+    cp_overlap: 0.0
 execution_backend:
   model: analytical # analytical | astra
   astra:
