--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_selene_sc.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_selene_sc.yaml
@@ -122,6 +122,13 @@ network:
       parallelisms: []
       collective_override: {} # overrides execution_backend.collectives when provided
 
+  overlap:
+    # fraction of TP+SP compute that can overlap TP/SP comm
+    tp_sp_overlap: 0.63
+    # fraction of TP compute that can overlap TP comm
+    tp_overlap: 0.6
+    # fraction of CP comm that can overlap CP compute
+    cp_overlap: 0.0
 execution_backend:
   model: astra # analytical | astra
   astra:
