massive reformat in prep for migration. no functionality change

--- a/configs/legacy/v100.yaml
+++ b/configs/legacy/v100.yaml
@@ -1,7 +1,3 @@
-# Config that models 20 V100 GPUs in a node.
-# We are ignoring NVLINK2.0 controller area for now.
-
-
 sw_param:
   kernel_launch_overhead: 9e-6   #9us
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
@@ -48,10 +44,10 @@ tech_param:
     dynamic_energy_per_bit: 4.2e-12     #Joules
     static_power_per_bit: 0.6e-12
     area_per_bit: 11e-10     #mm2
-    stack_capacity: 4 GB     # stack is the entire HBM chip!!!
-    area_per_stack: 100     #mm2 # footprint of the entire chip!!! Also used to compute no. of DRAM stacks!!!!
+    stack_capacity: 4 GB
+    area_per_stack: 100     #mm2
     latency: 100e-9
-    mem_ctrl_area: 5     #mm2 ## IMPORTANT: This is used to compute no. of DRAM stacks!!!!
+    mem_ctrl_area: 5     #mm2 
     nominal_frequency: 1.38e9
     nominal_voltage: 1.2
     threshold_voltage: 0.4
@@ -91,33 +87,17 @@ tech_param:
     overhead: 0.25
     util: 1
   network:
-        # How we arrived at the intra_node NVLINK 2.0 parameters:
-        # For nominal freuqnecy which is actually bits/second, we found 50GB/s PER NVLINK.
-        # However, each NVLINK is composed out of 32 WIRES (16 diff pairs, 8 per direction).
-        # So, 50 / 32 = 1.56 GB/s
-        # So 1.56 * 8 = 12.48 Gb/s PER NVLINK
-        # For energy, we found 8pj/bit.
-        # nominal_enery_per_link is ACTUALLY joules/byte per link.
-        # THIS MEANS WE ARE TREATING LINKS IN THE CODE AS PHYSICAL WIRES.
-        # then, for num_links_per_mm, we assume 815mm^2 V100 is square.
-        # perimeter is then 114.2
-        # 32 physical wires per NVlink, 6 NVlinks per chip, so 32*6 = 192 links per 114 mm^2
-        # Then, we DOUBLE the number to account for perimeter fraction is 0.5
-
-        # There is a major issue. The numbers calculated above are PER GPU.
-        # We have 20 workers in the node, but the code assumes the numbers are PER NODE, not per GPU. However it asks for links per ONE GPUs perimeter. THis makes no sense.
-    intra_node:     # We should model NVLINK 2.0
+    intra_node:
       latency: 5e-6
-      nominal_frequency: 12.48e9     # THIS IS BITS/SECOND PER LINK!!!! Look at lines 502 in hw_component.py, 678 in perf.py
+      nominal_frequency: 3e9
       nominal_voltage: 1
-          # energy per link 
-      energy_per_bit: 8e-12     # This is probably pessimistic, as it is likely stated for 300mm. Our avg distance is 150mm. 8pj/Bit based on https://www.techpowerup.com/forums/threads/nvidia-is-preparing-co-packaged-photonics-for-nvlink.276139/#:~:text=While%20the%20current%20NVLink%202.0,(4%20pJ%2Fb), https://www.techpowerup.com/img/fpXXsSk543ZUFWcx_thm.jpg
-      nominal_area_per_link: 1e-12     #mm^2. We are setting this to an extremely low value on purpose to ignore mem ctrl area. This is basically 0 but we cant set to 0 because of div errors.
-      num_links_per_mm: 3.363     #increased a tiny bit to account for integer division and the fact that I dropped digits
+      energy_per_bit: 1e-12
+      nominal_area_per_link: 100e-6     #mm^2
+      num_links_per_mm: 400
       threshold_voltage: 0.25
       margin_voltage: 0.45
-      util: 0.95
-    inter_node:     # ignore for now, all comms are intra comms.
+      util: 1
+    inter_node:
       latency: 5e-6
       nominal_frequency: 20e9
       nominal_voltage: 1.2
@@ -127,49 +107,50 @@ tech_param:
       threshold_voltage: 0.35
       margin_voltage: 0.5
       util: 0.96
-area_breakdown: # No longer fractions. Absolute values in mm^2.
-  device_area_budget: 1230   #mm^2 # DRAM Area is device_area_budget - proc_chip_area_budget. This is how we compute DRAM stack no.!
-  proc_chip_area_budget: 815   #mm^2
+
+area_breakdown:
+  device_area_budget: 1230   #mm2
+  proc_chip_area_budget: 815   #mm2
   core: 244.5
   L2: 65.7053
   L1: 8.3945
   reg_mem: 17.93
-  DRAM: 20.212   # This is the Memory controller area of the compute chip. IMPORTANT: Used to compute no. of DRAM stacks!
+  DRAM: 20.212
   network:
-    intra_node: 0.0   # This is the intra-node I/O controller area of the compute chip.
-    inter_node: 81.5   # This is the inter-node I/O controller area of the compute chip.
+    intra_node: 0.0
+    inter_node: 81.5
 
-power_breakdown: # Absolute values in W. TDP is total power.
+power_breakdown:
   TDP: 300
-  core: 112.35
+  core: 112.35   #0.4927 if 0.171W per core #0.0189 for 15.7Tflops #0.1504 for 125TFLOps
   DRAM: 48
   L2: 2.4
   L1: 31.23
   reg_mem: 90.66
   network:
-    intra_node: 18.75
-    inter_node: 0.0
+    intra_node: 0.0
+    inter_node: 2.805
 
-
-perimeter_breakdown: # out of the compute die, what fraction of the perimeter is dedicated to IO links to each component
+perimeter_breakdown:
   DRAM: 0.5
   intra_node: 0.0
   inter_node: 0.5
 
 system_hierarchy:
-  num_devices_per_node: 1   # devices per package essentially
-  num_nodes: 20   # one package
-  intra_derate: 0   # derate is just a scaling down factor for the throughput of the links
+  num_devices_per_node: 1
+  num_nodes: 1
   inter_derate: 1
-  kp1_inter: true
-  kp2_inter: true
+  intra_derate: 0
+  kp1_inter: false
+  kp2_inter: false
   dp_inter: false
   lp_inter: false
-  tp_inter: true
+  tp_inter: false
 
 network_topology:
-  inter_node: none     #mesh, torus, crossbar, custom, hierarchical
-  intra_node: mesh
+  # Allowed values: ring | fc | switch
+  inter_node: ring
+  intra_node: ring
 
 memory_hierarchy:
   l0:   #Register Memory
@@ -187,26 +168,14 @@ memory_hierarchy:
 
 scheduling_param:
   auto: false
-  dp: 1
-  lp: 1
-  mb: 1
-  tp: 20
-  tp_sp: false
-  t: CR
-  kp1: 20
-  kp2: 1
-  kp_hidden_dim1: 1
-  kp_hidden_dim2: 1
-  kp_softmax_dim1: 1
-  kp_softmax_dim2: 1
-  kp_embedding_dim1: 1
-  kp_embedding_dim2: 1
-  kp_projection_dim1: 1
-  kp_projection_dim2: 1
-  kp_hidden_type: -1
-  kp_softmax_type: -1
-  kp_embedding_type: -1
-  kp_projection_type: -1
+  ### LLM PARAMS ###
+  dp: 1 # acts as replica count during inference
+  lp: 1 # pipeline stages 
+  mb: 1 # number of micro-batches
+  tp: 1 # tensor parallelism
+  tp_sp: true # tensor-sequence parallelism
+  cp: 1  # context parallelism
+
 execution_backend:
   model: astra # analytical | astra
   astra:
