--- a/configs/hardware-config/H100_SXM5_80GB_calibrated.yaml
+++ b/configs/hardware-config/H100_SXM5_80GB_calibrated.yaml
@@ -7,6 +7,7 @@
 sw_param:
   full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
   kernel_launch_overhead: 1e-4   # (s)
+  grad_acc_overhead: 1e-4 # (s)
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
   dp_zero_stage: 1
