--- a/validation_scripts/validation_configs/model-config/Llama3.1-70B_inf.yaml
+++ b/validation_scripts/validation_configs/model-config/Llama3.1-70B_inf.yaml
@@ -3,7 +3,7 @@ model_param:
   run_type: "inference" # Type of run: "training" or "inference"
   tied_embeddings: true  # Share input and output embedding weights (WIP: affects memory estimation only)
   model_type: "llama"  # gpt assumes dense-style architecture with GELU; llama assumes llama-style architecture with SwiGLU
-  global_batch_size: 16  # Sequences per global batch
+  global_batch_size: 1  # Sequences per global batch
   gradient_accumulation_steps: 1  # Number of gradient accumulation micro-steps per optimizer update
   seq_len: 2048  # Total context length (prefill + decode_len for inference)
   decode_len: 1024 # Number of tokens to decode during inference
@@ -16,6 +16,6 @@ model_param:
     attention_tile_size: 128  # Tile size used in attention computation
   num_experts: 1   # Number of experts in MoE layers. Set to 1 to disable MoE.
   top_k: 1   # Number of active experts per token in MoE
-  intermediate_size: 28672 # Output dimension of the first FFN layer (typically 4×hidden_dim)
-  vocab_size: 32000  # Vocabulary size
+  intermediate_size: 28672 # Output dimension of the first FFN layer (typically 4xhidden_dim)
+  vocab_size: 128256  # Vocabulary size
   num_layers: 80 # Number of transformer layers
