--- a/configs/hardware-config/H100_SXM5_80GB.yaml
+++ b/configs/hardware-config/H100_SXM5_80GB.yaml
@@ -19,7 +19,7 @@ sw_param:
     # Each field accepts: numeric byte counts, dtype strings (fp8/fp16/bf16/fp32), or "as_tensor_format"
     kv_cache: as_tensor_format # KV cache precision. WIP - currently ignored.
     parameters: as_tensor_format  # Model parameter precision
-    gradients: fp32  # Accumulated gradients 
+    gradients: as_tensor_format  # Accumulated gradients 
     grad_communication: as_tensor_format  # Gradient communication precision 
     optimizer_states: as_tensor_format  # Optimizer states 
     stats: as_tensor_format  # Normalization statistics 
@@ -83,25 +83,29 @@ memory_hierarchy:
 parallelism:
   auto: false
   ### LLM PARAMS ###
-  dp: 1 # data parallelism. Acts as replica count during inference
-  ep: 1 # expert parallelism
-  tp: 2 # tensor parallelism
-  tp_sp: false # tensor-sequence parallelism
+  tp: 1 # tensor parallelism
+  tp_sp: true # tensor-sequence parallelism
   cp: 1 # context parallelism. Not supported for inference.
-  lp: 1 # pipeline parallelism. Number of pipeline stages
+  lp: 23 # pipeline parallelism. Number of pipeline stages
   # mb is not a true parallelism parameter, does not affect num of GPUs.
-  mb: 1 # micro-batches (for best results set to >= lp). 
+  mb: 23 # micro-batches (for best results set to >= lp). 
 
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 1 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 1 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   dimensions:
     - id: dim0
       label: torus2d_tp
       size: auto
       topology:
-        type: Ring
-        bandwidth: 99999 GB # We assume 8 25GB/s NVLINKs in the torus. Torus2D is hardcoded bidirectional, so it's actually 4 links, 25GB/s each (because they get replicated). So 100GB/s total. 
+        type: FC
+        bandwidth: 300 GB # We assume 8 25GB/s NVLINKs in the torus. Torus2D is hardcoded bidirectional, so it's actually 4 links, 25GB/s each (because they get replicated). So 100GB/s total. 
         latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
         util: 1.0
