--- a/configs/hardware-config/H100_SXM5_80GB_calibrated_tuned.global.yaml
+++ b/configs/hardware-config/H100_SXM5_80GB_calibrated_tuned.global.yaml
@@ -64,15 +64,19 @@ memory_hierarchy:
     scope: global
 parallelism:
   auto: false
-  dp: 2
-  ep: 1 # expert parallelism
   tp: 2
   tp_sp: true
   cp: 1
   lp: 2
   mb: 4
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 2 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 2 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   dimensions:
   - id: dim0
