--- a/configs/hardware-config/waferscale_20v100_80hbm.yaml
+++ b/configs/hardware-config/waferscale_20v100_80hbm.yaml
@@ -104,16 +104,20 @@ memory_hierarchy:
 
 parallelism:
   auto: false
-  dp: 1
-  ep: 1 # expert parallelism
   lp: 1
   mb: 1
   tp: 20
   tp_sp: false
   cp: 1
 
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 1 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 1 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   dimensions:
     - id: dim0
