--- a/validation_scripts/validation_configs/hardware-config/H100_SXM5_80GB_2d.yaml
+++ b/validation_scripts/validation_configs/hardware-config/H100_SXM5_80GB_2d.yaml
@@ -88,8 +88,6 @@ memory_hierarchy:
 parallelism:
   auto: false
   ### LLM PARAMS ###
-  dp: 1 # data parallelism. Acts as replica count during inference
-  ep: 1 # expert parallelism
   tp: 8 # tensor parallelism
   tp_sp: false # tensor-sequence parallelism
   cp: 1 # context parallelism. Not supported for inference.
@@ -97,8 +95,14 @@ parallelism:
   # mb is not a true parallelism parameter, does not affect num of GPUs.
   mb: 1 # micro-batches (for best results set to >= lp). 
 
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 1 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 1 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   overlap:
     tp_overlap: 0.0
