--- a/validation_scripts/validation_configs/hardware-config/a100_80GB_selene_sc.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB_selene_sc.yaml
@@ -80,8 +80,6 @@ memory_hierarchy:
     scope: global
 
 parallelism:
-  dp: 2 # data parallelism. Acts as replica count during inference
-  ep: 1 # expert parallelism
   tp: 2 # tensor parallelism
   tp_sp: true # tensor-sequence parallelism
   cp: 2 # context parallelism. Not supported for inference.
@@ -89,13 +87,18 @@ parallelism:
   # mb is not a true parallelism parameter, does not affect num of GPUs.
   mb: 4 # micro-batches (for best results set to >= lp). 
 
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 2 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 2 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   # Global faulty links apply to the active AstraSim dimension: [[src, dst, weight]]
   # faulty_links: [[0,1,0.6],[16,17,0.1]]
   dimensions:
-    # currently only support astrasim integration with all devices in one node.
     - id: dim0
       label: torus2d_tp
       size: auto
