--- a/configs/hardware-config/H100_SXM5_80GB_epinf.yaml
+++ b/configs/hardware-config/H100_SXM5_80GB_epinf.yaml
@@ -5,9 +5,8 @@
 # [Semi] https://semianalysis.com/2025/06/23/nvidia-tensor-core-evolution-from-volta-to-blackwell/#4th-generation-tensor-core-warpgroup-level-asynchronous-mma
 
 sw_param:
-  full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
-  kernel_launch_overhead: 1e-4   # (s)
-  grad_acc_overhead: 1e-4 # (s)
+  full_recomputation: true # Enable full activation recompute during backward instead of selective recomputation
+  kernel_launch_overhead: 9e-6   # (s)
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
   dp_zero_stage: 1
@@ -20,13 +19,13 @@ sw_param:
     # Each field accepts: numeric byte counts, dtype strings (fp8/fp16/bf16/fp32), or "as_tensor_format"
     kv_cache: as_tensor_format # KV cache precision. WIP - currently ignored.
     parameters: as_tensor_format  # Model parameter precision
-    gradients: fp32  # Accumulated gradients 
+    gradients: as_tensor_format  # Accumulated gradients 
     grad_communication: as_tensor_format  # Gradient communication precision 
-    optimizer_states: fp32  # Optimizer states 
-    stats: fp32  # Normalization statistics 
-    master_parameters: 0  # master weight copy in bytes (0 = disabled)
+    optimizer_states: as_tensor_format  # Optimizer states 
+    stats: as_tensor_format  # Normalization statistics 
+    master_parameters: 0.0  # master weight copy in bytes (0 = disabled)
   h2d_bandwidth: -1  # Bytes/s; set -1 to disable H2D timing
-  const_mem_offset: 0 GB # added to mem prediction
+  const_mem_offset: 0 GB # default 0 GB. We will optimize it later.
   # DP gradient sync frequency: every_mb (default) or last_mb (sync only on final microbatch; ZeRO-3 stays per-mb)
   dp_microbatch: last_mb
 tech_param:
@@ -40,14 +39,14 @@ tech_param:
     FMA_d1: 16                # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
     FMA_d2: 8
     dataflow: best
-    util: 1  # calibrated from HF bench (pp=1 median ratio)
+    util: 1.0
   DRAM:
     size: 80 GB     # [TePU]
     # bandwidth: 3430 GB     # (/s) [TePU]
     bandwidth: 3350 GB     # (/s) [NVIDIA]
     dynamic_energy_per_bit: 4.5e-12     # (J) [https://passlab.github.io/mchpc/mchpc2019/presentations/MCHPC_Pawlowski_keynote.pdf, slide 36]
     latency: 100e-9     # (s)
-    util: 1  # calibrated from HF bench (pp=1 median ratio)
+    util: 1
   SRAM-L2:
     size: 50 MB     # [TePU]
     bandwidth: 8138 GB     # NCU L2 peak traffic
@@ -84,20 +83,20 @@ memory_hierarchy:
 parallelism:
   auto: false
   ### LLM PARAMS ###
-  tp: 2 # tensor parallelism
+  tp: 16 # tensor parallelism
   tp_sp: true # tensor-sequence parallelism
   cp: 1 # context parallelism. Not supported for inference.
-  lp: 2 # pipeline parallelism. Number of pipeline stages
+  lp: 1 # pipeline parallelism. Number of pipeline stages
   # mb is not a true parallelism parameter, does not affect num of GPUs.
-  mb: 4 # micro-batches (for best results set to >= lp). 
+  mb: 1 # micro-batches (for best results set to >= lp). 
 
   train:
-    dp: 2 # data parallelism
+    dp: 1 # data parallelism
     ep: 1 # expert parallelism
     # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-    tp_ep: true
+    tp_ep: false
   inference:
-    replica_count: 2 # inference throughput scaling only
+    replica_count: 1 # inference throughput scaling only
     moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   dimensions:
@@ -105,23 +104,23 @@ network:
       label: torus2d_tp
       size: auto
       topology:
-        type: Ring
-        bandwidth: 100 GB # We assume 8 25GB/s NVLINKs in the torus. Torus2D is hardcoded bidirectional, so it's actually 4 links, 25GB/s each (because they get replicated). So 100GB/s total. 
+        type: FC
+        bandwidth: 300 GB # We assume 8 25GB/s NVLINKs in the torus. Torus2D is hardcoded bidirectional, so it's actually 4 links, 25GB/s each (because they get replicated). So 100GB/s total. 
         latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
         optimize_2dmap: false
       collective_override: {} # overrides execution_backend.collectives when provided
-      parallelisms: [tp, cp]
+      parallelisms: [tp, cp, ep]
     - id: dim1
       label: inter_torus_infiniband
       size: auto
       topology:
         type: Ring 
         bandwidth: 25 GB
-        latency: 1e-5
+        latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
       collective_override: {} # overrides execution_backend.collectives when provided
       parallelisms: [lp,dp]
     - id: dim2
@@ -130,9 +129,9 @@ network:
       topology:
         type: Ring
         bandwidth: 25 GB
-        latency: 1e-5
+        latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
       parallelisms: []
       collective_override: {} # overrides execution_backend.collectives when provided
 
