--- a/configs/hardware-config/a100_80GB_moe.yaml
+++ b/configs/hardware-config/a100_80GB_moe.yaml
@@ -1,13 +1,6 @@
-# RAPID-LLM configuration for NVIDIA H100 PCIe 80 GB
-# specifications from the following sources:
-# [NVIDIA] https://resources.nvidia.com/en-us-hopper-architecture/nvidia-h100-tensor-c
-# [TePU] https://www.techpowerup.com/gpu-specs/h100-sxm5-80-gb.c3900
-# [Semi] https://semianalysis.com/2025/06/23/nvidia-tensor-core-evolution-from-volta-to-blackwell/#4th-generation-tensor-core-warpgroup-level-asynchronous-mma
-
 sw_param:
-  full_recomputation: false # Enable full activation recompute during backward instead of selective recomputation
-  kernel_launch_overhead: 1e-4   # (s)
-  grad_acc_overhead: 1e-4 # (s)
+  full_recomputation: true # Enable full activation recompute during backward instead of selective recomputation
+  kernel_launch_overhead: 9e-6   # (s)
   # dp_zero_stage selects ZeRO-style data-parallel sharding: 0=DDP, 1=ZeRO-1, 2=ZeRO-2, 3=ZeRO-3
   # only used if data parallelism (dp) > 1
   dp_zero_stage: 1
@@ -20,50 +13,49 @@ sw_param:
     # Each field accepts: numeric byte counts, dtype strings (fp8/fp16/bf16/fp32), or "as_tensor_format"
     kv_cache: as_tensor_format # KV cache precision. WIP - currently ignored.
     parameters: as_tensor_format  # Model parameter precision
-    gradients: fp32  # Accumulated gradients 
+    gradients: as_tensor_format  # Accumulated gradients 
+    grad_microbatch: as_tensor_format  # Ephemeral per-microbatch gradients 
     grad_communication: as_tensor_format  # Gradient communication precision 
-    optimizer_states: fp32  # Optimizer states 
-    stats: fp32  # Normalization statistics 
-    master_parameters: 0  # master weight copy in bytes (0 = disabled)
+    optimizer_states: as_tensor_format  # Optimizer states 
+    stats: as_tensor_format  # Normalization statistics 
+    master_parameters: 0.0  # master weight copy in bytes (0 = disabled)
   h2d_bandwidth: -1  # Bytes/s; set -1 to disable H2D timing
-  const_mem_offset: 0 GB # added to mem prediction
+  const_mem_offset: 0 GB # default 0 GB. We will optimize it later.
   # DP gradient sync frequency: every_mb (default) or last_mb (sync only on final microbatch; ZeRO-3 stays per-mb)
   dp_microbatch: last_mb
 tech_param:
   core:
-    # operating_frequency: 1.98e9     # (Hz) GPU boost clock frequency [TePU]
-    operating_frequency: 1.83e9     # (Hz) GPU boost clock frequency [TePU, derated to match FLOPS]
-    num_bundles: 132     # number of bundles (SMs) [TePU]
-    nominal_flop_rate_per_mcu: 1024     # F16 FLOP / cycle / SM is 4096 [Semi]
-    nominal_energy_per_flop: 1.8e-13
-    num_mcu_per_bundle: 4     # number of tensorcores per SM [TePU]
-    FMA_d1: 16                # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
-    FMA_d2: 8
-    dataflow: best
-    util: 1  # calibrated from HF bench (pp=1 median ratio)
+    operating_frequency: 1.41e9     # (Hz)
+    num_bundles: 108
+    nominal_flop_rate_per_mcu: 512
+    nominal_energy_per_flop: 1.8e-13 # (J)
+    num_mcu_per_bundle: 4     # number of tensorcores per SM
+    FMA_d1: 8                 # tensor core can compute the results for an d1 x d2 x d1 mixed-precision matrix multiplication per clock
+    FMA_d2: 4
+    dataflow: best            # {wst | ast | ost | best}: wst: weight stationary, ast: activation stationary, ost: output stationary, best: best of all 3
+    util: 1.0
   DRAM:
-    size: 80 GB     # [TePU]
-    # bandwidth: 3430 GB     # (/s) [TePU]
-    bandwidth: 3350 GB     # (/s) [NVIDIA]
-    dynamic_energy_per_bit: 4.5e-12     # (J) [https://passlab.github.io/mchpc/mchpc2019/presentations/MCHPC_Pawlowski_keynote.pdf, slide 36]
+    size: 80 GB
+    bandwidth: 1986 GB     # (/s)
+    dynamic_energy_per_bit: 4.5e-12     # (J)
     latency: 100e-9     # (s)
-    util: 1  # calibrated from HF bench (pp=1 median ratio)
+    util: 1.0
   SRAM-L2:
-    size: 50 MB     # [TePU]
-    bandwidth: 8138 GB     # NCU L2 peak traffic
-    dynamic_energy_per_bit: 130e-15
+    size: 40 MB
+    bandwidth: 7050 GB
+    dynamic_energy_per_bit: 130e-15 # (J)
     latency: 0
     util: 1
   SRAM-L1:
-    size: 30096 KB     # max configurable shared memory per SM * number of SMs [NVIDIA]. NOT unified L1 + shared.
-    bandwidth: 22392 GB     # NCU L1/TEX peak traffic
-    dynamic_energy_per_bit: 130e-15
+    size: 20736 KB
+    bandwidth: 18 TB
+    dynamic_energy_per_bit: 130e-15 # (J)
     latency: 0
     util: 1
   SRAM-R:
-    size: 33 MB     # register file memory per SM * number of SMs [NVIDIA]
-    bandwidth: 122 TB     # traffic for 2 reads and 1 write for GEMMs computed per clock
-    dynamic_energy_per_bit: 110e-15
+    size: 27 MB
+    bandwidth: 122 TB     
+    dynamic_energy_per_bit: 110e-15 # (J)
     latency: 0
     util: 1
 
@@ -82,24 +74,28 @@ memory_hierarchy:
     scope: global
 
 parallelism:
-  auto: false
-  ### LLM PARAMS ###
   tp: 2 # tensor parallelism
   tp_sp: true # tensor-sequence parallelism
   cp: 1 # context parallelism. Not supported for inference.
-  lp: 2 # pipeline parallelism. Number of pipeline stages
+  lp: 4 # pipeline parallelism. Number of pipeline stages
   # mb is not a true parallelism parameter, does not affect num of GPUs.
-  mb: 4 # micro-batches (for best results set to >= lp). 
+  mb: 4 # micro-batches (for best results set to >= lp).
 
   train:
     dp: 2 # data parallelism
-    ep: 1 # expert parallelism
+    ep: 4 # expert parallelism
     # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
     tp_ep: true
   inference:
     replica_count: 2 # inference throughput scaling only
-    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
+    moe_dp: 2 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
+  overlap:
+    tp_overlap: 0.63
+    tp_sp_overlap: 0.6
+    cp_overlap: 0.0
+  # Global faulty links apply to the active AstraSim dimension: [[src, dst, weight]]
+  # faulty_links: [[0,1,0.6],[16,17,0.1]]
   dimensions:
     - id: dim0
       label: torus2d_tp
@@ -109,7 +105,7 @@ network:
         bandwidth: 100 GB # We assume 8 25GB/s NVLINKs in the torus. Torus2D is hardcoded bidirectional, so it's actually 4 links, 25GB/s each (because they get replicated). So 100GB/s total. 
         latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
         optimize_2dmap: false
       collective_override: {} # overrides execution_backend.collectives when provided
       parallelisms: [tp, cp]
@@ -118,10 +114,10 @@ network:
       size: auto
       topology:
         type: Ring 
-        bandwidth: 25 GB
-        latency: 1e-5
+        bandwidth: 25 GB # SPLIT INTO BW_PER_GPU, BW_TOTAL. BW TOTAL IS ONLY ALLOWED IF PREV DIM is 2D.
+        latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
       collective_override: {} # overrides execution_backend.collectives when provided
       parallelisms: [lp,dp]
     - id: dim2
@@ -130,19 +126,12 @@ network:
       topology:
         type: Ring
         bandwidth: 25 GB
-        latency: 1e-5
+        latency: 5e-6
         energy_per_bit: 8e-12 # (J/bit)
-        util: 1.0  # fully utilized
+        util: 1.0
       parallelisms: []
       collective_override: {} # overrides execution_backend.collectives when provided
 
-  overlap:
-    # fraction of TP+SP compute that can overlap TP/SP comm
-    tp_sp_overlap: 0.0
-    # fraction of TP compute that can overlap TP comm
-    tp_overlap: 0.0
-    # fraction of CP comm that can overlap CP compute
-    cp_overlap: 0.0
 execution_backend:
   model: astra # analytical | astra
   astra:
@@ -160,6 +149,7 @@ execution_backend:
       endpoint_delay: 5
       active_chunks_per_dimension: 32 # Higher value means significantly slower astrasim runtime, but more accurate especially for tensor parallelism
       preferred_dataset_splits: 4 # Should be same as active_chunks_per_dimension
+      collective_arbitration: last_resort  
 
 inference:
-  kvcache_type: hbm_only
+  kvcache_type: hbm_only # Only supported mode for now.
