--- a/validation_scripts/validation_configs/hardware-config/a100_80GB.fitted.yaml
+++ b/validation_scripts/validation_configs/hardware-config/a100_80GB.fitted.yaml
@@ -63,15 +63,19 @@ memory_hierarchy:
     type: DRAM
     scope: global
 parallelism:
-  dp: 2
-  ep: 1 # expert parallelism
   tp: 2
   tp_sp: false
   cp: 2
   lp: 4
   mb: 1
-  # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
-  tp_ep: true
+  train:
+    dp: 2 # data parallelism
+    ep: 1 # expert parallelism
+    # controls expert TP sharding: if false, tp and ep are applied separately to attn/FFN; if true, TP applies to both
+    tp_ep: true
+  inference:
+    replica_count: 2 # inference throughput scaling only
+    moe_dp: 1 # inference expert pool expansion (EP_eff = tp * moe_dp)
 network:
   dimensions:
   - id: dim0
