--- a/configs/model-config/GLM4.7_331B.yaml
+++ b/configs/model-config/GLM4.7_331B.yaml
@@ -3,9 +3,10 @@ model_param:
   run_type: training
   tied_embeddings: false
   model_type: glm4_moe
-  global_batch_size: 230
+  global_batch_size: 180
   gradient_accumulation_steps: 1
-  seq_len: 202740
+  # seq_len: 202740
+  seq_len: 33078
   decode_len: 1024
   hidden_dim: 5120
   attention:
