--- a/configs/model-config/DeepSeekMOE.yaml
+++ b/configs/model-config/DeepSeekMOE.yaml
@@ -12,7 +12,7 @@ model_param:
     attention_type: mha
     num_heads: 16
     kv_heads: null
-    use_flashattention: true
+    use_flashattention: true # Enable FlashAttention optimization (when false, we model naive attention without causal masking or flash optimizations)
     attention_tile_size: 128
   intermediate_size: 10944
   moe:
