--- a/validation_scripts/validation_configs/model-config/GPT_175_B_2d_inf.yaml
+++ b/validation_scripts/validation_configs/model-config/GPT_175_B_2d_inf.yaml
@@ -12,7 +12,7 @@ model_param:
     attention_type: "mha"
     num_heads: 96
     kv_heads: 96
-    use_flashattention: true
+    use_flashattention: true # Enable FlashAttention optimization (when false, we model naive attention without causal masking or flash optimizations)
     attention_tile_size: 128
   moe:
     num_experts: 1
