--- a/validation_scripts/validation_configs/model-config/GPT_1T.yaml
+++ b/validation_scripts/validation_configs/model-config/GPT_1T.yaml
@@ -11,7 +11,7 @@ model_param:
     attention_type: "mha"
     num_heads: 160
     kv_heads: 160
-    use_flashattention: false
+    use_flashattention: false # Enable FlashAttention optimization (when false, we model naive attention without causal masking or flash optimizations)
     attention_tile_size: 128
   moe:
     num_experts: 1
